Clean up code some, and begin working on a dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-
     <!--Added CSS Framework-->
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -35,6 +34,8 @@
     
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+
+    <link rel="stylesheet" href="../src/index.css">
     
     <!-- You should properly set the path from the main file. -->
   </head>
